--- a/css/home_works.css
+++ b/css/home_works.css
@@ -42,11 +42,12 @@
 }
 
 .parent_block {
-    height: 500px;
-    width: 500px;
+    height: 392px;
+    width: 606px;
     border: 1px solid var(--orange);
     position: relative;
     margin: 0 auto;
+    background: url(https://media.istockphoto.com/id/957140132/ru/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F/%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5-%D0%BF%D0%BE%D0%BB%D0%B5-%D0%B8%D0%BB%D0%B8-%D1%84%D0%BE%D0%BD-%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BF%D0%BE%D0%BB%D1%8F-%D1%81%D0%B8%D0%BD%D0%B8%D0%B9-%D1%81%D1%83%D0%B4-%D0%B4%D0%BB%D1%8F-%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F-%D0%B8%D0%B3%D1%80%D1%8B.jpg?s=612x612&w=0&k=20&c=XG8UbQPCuNrPEnWY97z3k_UluC_hAIpsWsPlKdNQ790=);
     /*box-sizing: content-box;*/
 }
 
@@ -55,7 +56,8 @@
     top: 0;
     width: 50px;
     height: 50px;
-    background-color: red;
+    border-radius: 50%;
+    background-color: #f6063b;
 }
 
 .inner_move_block {
